2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/snmplib.cdl: Add doc link.

2003-02-03  Manu Sharma <manu.sharma@ascom.com>

        * include/transform_oids.h,
        * src/keytools.c,
        * src/lcd_time.c,
        * src/scapi.c,
        * src/snmp_api.c,
        * src/snmp_client.c,
        * src/snmpusm.c,
        * src/snmpv3.c,
        * src/tools.c,
        * src/vacm.c : Support to conditionally implement SNMPv3 features, 
        based on definition of CYGPKG_SNMPAGENT_V3_SUPPORT.

2002-12-06  Andrew Lunn  <andrew.lunn@ascom.ch>

        * cdl/snmplib.cdl: Make use of the CYGINT_IO_FILEIO_FS interface
        to determine if there are any filesystems in the system.
        
2002-11-11  Manu Sharma <manu.sharma@ascom.com>

        * cdl/snmplib.cdl: Added new component
          CYGPKG_SNMPLIB_FILESYSTEM_SUPPORT to support usage of the
          snmpd.conf file based agent configuration.

        * src/read_config.c: Include functions that read the snmpd.conf
          file and setup the infrastructure based on configurations in
          this file.

2002-02-01  Gary Thomas  <gthomas@redhat.com>

	* src/system.c: 
	* src/snmp_api.c: Need valid value for sin_len.

2002-01-18  Andrew Lunn  <Andrew.Lunn@ascom.ch>

	* src/system.c (get_myaddr): The information returned by the ioctl
	call SIOCGIFCONF is not a simple array of fixed length
	entries. Look at each entry to work out its length.
	
2001-10-05  Jesper Skov  <jskov@redhat.com>

	* include/config.h: CYGINT_ISO_DNS changed to bool.

2001-09-24  Jesper Skov  <jskov@redhat.com>

	* include/config.h: Define HAVE_GETHOSTBYNAME only if a DNS
	package is available.

2001-05-28  Andrew Lunn  <Andrew.Lunn@ascom.ch>
2001-05-28  Manu Sharma  <Manu.Sharma@ascom.ch>

	* src/snmpusm.c, include/snmpusm.h: Added the ability to tell the
	agent the time of day has changed. This is used when an NTP client
	finds out the correct time and jumps time forward by 30 odd years.
